# app/controllers/middleware/ permission_auth.js
@@ -1,0 +1,10 @@
+module.exports = (req, res, next) => {
+
+    if (req.userPermission === 'collaborator' || req.userPermission === 'master')
+        return next();
+
+    return res.status(401).send({
+        code: 401,
+        message: 'Invalid permission'
+    });
+}
