# app/routes/auth.routes.js
@@ -1,8 +1,10 @@
 
 const Login = require('../controllers/login.controllers');
 const authMiddleware = require('../controllers/middleware/auth');
+const permissionAuthMiddleware = require('../controllers/middleware/ permission_auth');
 
 const User = require('../controllers/user/user.controllers ');
+const Collaborator = require('../controllers/collaborator/collaborator.controllers ');
 
 module.exports = app => {
 
@@ -16,8 +18,14 @@ module.exports = app => {
 
     app.get('/users', User.USERS);
     app.get('/userOne', User.USERONE);
+    app.put('/update_user', User.UPDATEUSER);
 
     app.get('/mycalls', User.MYCALLS);
     app.put('/register_mycalls', User.REGISTERMYCALLS);
     app.put('/mark_off', User.MARKOFF);
+
+    app.use(permissionAuthMiddleware);
+    app.post('/register_collaborator', Collaborator.REGISTERCOLLABORATOR);
+    app.get('/collaborators', Collaborator.COLLABORATORS);
+    app.delete('/remove_collaborator', Collaborator.REMOVECOLLABORATOR);
 }
